Fix extra padding

--- a/_includes/index.css
+++ b/_includes/index.css
@@ -342,6 +342,9 @@ li li {
 	max-width: 42rem;
 	clear: both;
 }
+header.elv-layout {
+	padding: 0 1rem;
+}
 footer.elv-layout {
 	margin-bottom: 5em;
 }
